deriving-0.1.1/tests/rejected/enum3.ml
(* Enum for polymorphic variant types with arguments *)

type t = [`A of int | `B] deriving (Enum)
